--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -8,7 +8,7 @@ $accent-yellow: #efd36c;
 $primary-purple: #793aaf;
 $secondary-purple: #faf1fe;
 $accent-purple: #be93e4;
-$primary-orange: #bd4b00;
+$primary-orange: #803300;
 $secondary-orange: #ffe8d7;
 $accent-orange: #ffb381;
 
